# professorNav

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: app.py  chroma_loader.py  extract_text.py  rag.py
chroma_storage/99c57d79-8d81-4598-adbf-18d70ab3c9a8/: index_metadata.pickle
docs/: Elliott D. Kaplan, Christopher J. Hegarty (eds.) - Understanding GPS_GNSS. Principles and Applications.txt  Jack K. Holmes - Spread Spectrum Systems for GNSS and Wireless Communications.txt  Laura Ruotsalainen, Martti Kirkko-Jaakkola, Jukka Talvitie - The Present and Future of Indoor Navigation.txt  Paul D. Groves - Principles of GNSS, Inertial, and Multi-Sensor Integrated Navigation Systems.txt  Sofie Pollin, Michael Timmers, Liesbet Van der Perre (auth.) - Software Defined Radios_ From Smart(er) to Cognitive.txt  Thomas Pany - Navigation Signal Processing for GNSS Software Receivers.txt  Vishnu Subramanian - Deep Learning with PyTorch_ A practical approach to building neural network models using PyTorch.txt  Zheng Yao, Mingquan Lu - Next-Generation GNSS Signal Design_ Theories, Principles and Technologies.txt
