[project]
name = "professornav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.0",
    "django>=5.2.7",
    "fastapi>=0.118.0",
    "flask>=3.1.2",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "ollama>=0.6.0",
    "openai>=2.1.0",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
